# crucible

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml  studio-release.yml
code/: .importlinter  Makefile  README.md  pyproject.toml  pyrightconfig.json
code/apps/calculator/: README.md
code/apps/server/: README.md  pyproject.toml
code/apps/server/src/crucible_server/: __init__.py  app.py  cli.py  download.py
code/apps/server/tests/: test_cli.py  test_server.py
code/apps/token-saver/: README.md  pyproject.toml
code/apps/token-saver/src/crucible_token_saver/: __init__.py  cli.py  wrapper.py
code/apps/token-saver/tests/: test_wrapper.py
code/bench/crucible-bench/: README.md  pyproject.toml
code/bench/crucible-bench/src/crucible_bench/: __init__.py  kv.py  manifest.py  metrics.py  runner.py  stats.py  suite.py
code/bench/crucible-bench/tests/: test_gate.py  test_kv.py  test_runner.py  test_stats.py
code/code/bench/crucible-bench/runs/: run-20260607T164009Z.json
code/tests/: test_workspace_smoke.py
code/tools/: README.md  agent_demo.py  demo.py  real_slice.py  run_benchmark.py
dev/: index.html
dev/agent-loop/: index.html
dev/architecture/: index.html
dev/benchmarks/: index.html
dev/contributing/: index.html
dev/engine-contract/: index.html
dev/grammar/: index.html
dev/roadmap/: index.html
dev/token-savers/: index.html
docs/: 00-vision-and-scope.md  01-glossary.md  02-architecture.md  03-repo-and-modularization.md  04-tech-stack.md  05-evaluation-plan.md  06-roadmap.md  07-risk-register.md  08-security-threat-model.md  09-engineering-standards.md  10-traceability-matrix.md
docs/adr/: 0001-inference-native-co-location.md  0002-monorepo-now-polyrepo-later.md  0003-inference-engine-sglang.md  0004-grammar-two-phase-decoding.md  0005-token-saver-as-true-subset.md  0006-language-and-tooling.md  0007-local-storage-sqlite-vector.md  0008-licensing-open-core.md  0009-evaluation-as-product-gate.md  0010-kv-cache-reuse-llamacpp.md  README.md  _template.md
docs/product/: 0a-benchmark.md  0b-token-saver.md  0c-calculator.md  README.md  p1-core.md
scripts/: install.sh
search/: search_index.json
studio/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
studio/scripts/: build-sidecar.sh  gen-icons.mjs  sidecar_entry.py
studio/src/: App.tsx  index.css  nav.ts
studio/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
studio/src-tauri/binaries/: .gitignore
studio/src-tauri/capabilities/: default.json
studio/src-tauri/src/: catalog.rs  chat.rs  download.rs  lib.rs  main.rs  open.rs  server.rs  system.rs
studio/src/components/: ModelCatalog.tsx  ServerControl.tsx  SystemPanel.tsx
studio/src/components/layout/: Layout.tsx  Page.tsx  Sidebar.tsx  TopBar.tsx
studio/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Glyph.tsx  Icon.tsx  Progress.tsx  controls.tsx
studio/src/lib/: api.ts  format.ts  settings.ts
studio/src/pages/: Chat.tsx  Hardware.tsx  Models.tsx  Server.tsx  Settings.tsx
studio/src/state/: StudioContext.tsx
stylesheets/: extra.css
user/: index.html
user/cli/: index.html
user/clients/: index.html
user/faq/: index.html
user/install/: index.html
user/models/: index.html
user/opencode/: index.html
user/quickstart/: index.html
user/troubleshooting/: index.html
website/: mkdocs.yml  requirements.txt
website/docs/: index.md
website/docs/dev/: agent-loop.md  architecture.md  benchmarks.md  contributing.md  engine-contract.md  grammar.md  index.md  packages.md  roadmap.md  token-savers.md
website/docs/user/: cli.md  clients.md  faq.md  index.md  install.md  models.md  opencode.md  quickstart.md  troubleshooting.md
website/overrides/: home.html
