[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible-token-saver"
version = "0.0.1"
description = "0b: a drop-in token-saver that slots under an existing local agent. A true subset of Crucible Core."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Samuel Dagne" }]
dependencies = ["crucible-core"]

[project.scripts]
crucible-token-saver = "crucible_token_saver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible_token_saver"]
